# Healthstack-ai

./: .env.example  .gitignore  API_DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
app/: main.py
app/api/: deps.py
app/api/routes/: copilot.py  health.py  patients.py  session.py
app/core/: config.py  database.py
app/models/: schemas.py
app/services/: admin_retriever.py  care_summary.py  chunking.py  common.py  context.py  copilot.py  embeddings.py  llm.py  patient_resolver.py  pharmacy_retriever.py  question_router.py  referral_docx.py  referral_note.py  reranker.py  structured_retriever.py  structured_sources.py  vector_indexing.py  vector_retriever.py
scripts/: backfill_missing_source_docs.py  continue_backfill.py  reindex_vector_chunks.py  runtime_lock.py  sync_vector_chunks.py
